Browser compatability updates: Page titles, meta description, headings, alt tags.

--- a/vanlifeireland.html
+++ b/vanlifeireland.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="The Freedom Project is an Irish Vanlife Blog. Get an insight into vanlife in Ireland as well as tips and advice on DIY camper conversions!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/25e90f9c24.js" crossorigin="anonymous"></script>
     <link href="assets/images/favicon.png" rel="icon" type="image/png">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>The Freedom Project | An Irish Vanlife Blog</title>
+    <title>The Freedom Project | Vanlife in Ireland</title>
 </head>
 
 <body>
@@ -55,7 +57,7 @@
         </header>
         <!-- Banner Section -->
         <section class="container-fluid g-0">
-            <div class="banner-image-vanlife-ireland">
+            <div class="banner-image-vanlife-ireland" title="Goats Cheese parked in a snow covered forest">
                 <div class="banner-text">
                     <h1 class="h1">Vanlife in Ireland</h1>
                 </div>
@@ -66,7 +68,7 @@
             <section class="container-fluid d-flex justify-content-center">
                 <div class="row  coming-soon">
                     <div class="col-12">
-                        <h1 class="coming-soon-heading">Coming Soon</h1>
+                        <h2 class="coming-soon-heading">Coming Soon</h2>
                         <p class="coming-soon-text">Thanks for showing interest in what my blog has to offer. I am
                             currently
                             working on some great articles all about full-time vanlife in Ireland. Check back soon!</p>
