--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="The Freedom Project is an Irish Vanlife Blog. Get an insight into vanlife in Ireland as well as tips and advice on DIY camper conversions!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/25e90f9c24.js" crossorigin="anonymous"></script>
     <link href="assets/images/favicon.png" rel="icon" type="image/png">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>The Freedom Project | An Irish Vanlife Blog</title>
+    <title>The Freedom Project | Contact</title>
 </head>
 
 <body>
@@ -55,7 +57,7 @@
         </header>
         <!-- Banner Section -->
         <section class="container-fluid g-0">
-            <div class="banner-image-contact">
+            <div class="banner-image-contact" title="Sunset on the west coast of Ireland">
                 <div class="banner-text">
                     <h1 class="h1">Get in touch</h1>
                 </div>
