--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="The Freedom Project is an Irish Vanlife Blog. Get an insight into vanlife in Ireland as well as tips and advice on DIY camper conversions!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/25e90f9c24.js" crossorigin="anonymous"></script>
@@ -65,7 +67,7 @@
         <!-- Hero Section -->
         <section class="container-fluid g-0">
             <div class="opacity-container">
-                <div class="hero-image-home"></div>
+                <div class="hero-image-home" title="George & Zayda in their van, Goats Cheese"></div>
                 <div class="hero-text">
                     <h1 class="hero-heading">An Irish Vanlife Blog</h1>
                 </div>
@@ -77,7 +79,7 @@
             <div class="row biosection">
                 <div class="col-12 col-lg-4">
                     <!-- Profile Image -->
-                    <div class="bioimage"></div>
+                    <div class="bioimage" title="George & Zayda in the West of Ireland"></div>
                 </div>
                 <div class="col-12 col-lg-8 bio-text-section">
                     <!-- Bio -->
