--- a/ourstory.html
+++ b/ourstory.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="The Freedom Project is an Irish Vanlife Blog. Get an insight into vanlife in Ireland as well as tips and advice on DIY camper conversions!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/25e90f9c24.js" crossorigin="anonymous"></script>
     <link href="assets/images/favicon.png" rel="icon" type="image/png">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <title>The Freedom Project | An Irish Vanlife Blog</title>
+    <title>The Freedom Project | Our Story</title>
 </head>
 
 <body>
@@ -67,11 +69,11 @@
         <main class="max-body">
             <!-- Our Story Section -->
             <section class="container-fluid d-flex justify-content-center">
-                <h2 class="d-none">Our Story</h2>
+                <h1 class="d-none">Our Story</h1>
                 <div class="row biosection">
                     <div class="col-12">
                         <!-- Profile Image -->
-                        <div class="os-bioimage"></div>
+                        <div class="os-bioimage" title="George & Zayda in their van, Goats Cheese"></div>
                     </div>
                     <div class="col-12 bio-text-section">
                         <!-- Bio -->
