social icon titles, aria labels body for links + subscriber box

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
                     <div>
                         <ul class="nav-social">
                             <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
-                                    target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                                    target="_blank" title="Link to Instagram"><i
+                                        class="fab fa-instagram bold social-icon"></i></a></li>
                             <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
-                                    target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
+                                    target="_blank" title="Link to TikTok"><i class="fab fa-tiktok social-icon"></i></a>
+                            </li>
                             <!-- Collapsible search bar with search icon - to be used when search functionality is possible-->
                             <!-- <li class="bg-social-icon" data-bs-toggle="collapse" data-bs-target="#searchCollapse"
                                 aria-controls="searchcollapse" aria-expanded="false" aria-label="Open Search"><i
@@ -92,7 +94,7 @@
                             keep, how to get a van on the road in Ireland (registration, tax, and insurance), and an
                             inside
                             look into full-time vanlife in Ireland. You can read more about our story <a
-                                href="ourstory.html" class="bodylink">here</a>. I hope you
+                                href="ourstory.html" class="bodylink" aria-label="Link to Our Story">here</a>. I hope you
                             enjoy, and should you have any questions, don't be afraid to get in touch!</p>
                     </div>
                 </div>
@@ -157,7 +159,7 @@
         <section class="container-fluid d-flex justify-content-center emailsub-container">
             <div id="mc_embed_signup" class="row">
                 <h2 class="col-12 emailsub-header">Subscribe for updates!</h2>
-                <div class="row">
+                <div class="row mx-0">
                     <div class="col-12">
                         <!-- Email sub sourced from Mail Chimp (https://mailchimp.com/) -->
                         <form
@@ -166,7 +168,7 @@
                             class="validate needs-validation" target="_blank" novalidate>
                             <div id="mc_embed_signup_scroll">
                                 <input type="email" value="" class="form-control" name="EMAIL" id="mce-EMAIL"
-                                    placeholder="Email Address" required>
+                                    placeholder="Email Address" aria-label="Email Address" required>
                                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                                         name="b_4be784f130875c2a4eee67c32_632a602b72" tabindex="-1" value="">
@@ -203,9 +205,11 @@
                 <div>
                     <ul class="social-footer">
                         <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
-                                target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                                target="_blank" title="Link to Instagram"><i
+                                    class="fab fa-instagram bold social-icon"></i></a></li>
                         <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
-                                target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
+                                target="_blank" title="Link to TikTok"><i class="fab fa-tiktok social-icon"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
