--- a/ourstory.html
+++ b/ourstory.html
@@ -46,9 +46,11 @@
                         <div class="d-md-none d-lg-block">
                             <ul class="nav-social">
                                 <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
-                                        target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                                        target="_blank" title="Link to Instagram"><i
+                                            class="fab fa-instagram bold social-icon"></i></a></li>
                                 <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
-                                        target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
+                                        target="_blank" title="Link to TikTok"><i
+                                            class="fab fa-tiktok social-icon"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -115,7 +117,7 @@
                                 I hope you find the resources here helpful and if you have any questions, please feel
                                 free
                                 to
-                                get in touch either <a href="contact.html" class="bodylink">here</a> or on social media.
+                                get in touch either <a href="contact.html" class="bodylink" aria-label="Link to Contact page">here</a> or on social media.
                             </p>
                         </div>
                     </div>
@@ -144,9 +146,11 @@
                 <div>
                     <ul class="social-footer">
                         <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
-                                target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                                target="_blank" title="Link to Instagram"><i
+                                    class="fab fa-instagram bold social-icon"></i></a></li>
                         <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
-                                target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
+                                target="_blank" title="Link to TikTok"><i class="fab fa-tiktok social-icon"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
