--- a/diycamperconversion.html
+++ b/diycamperconversion.html
@@ -46,9 +46,11 @@
                         <div class="d-md-none d-lg-block">
                             <ul class="nav-social">
                                 <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
-                                        target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                                        target="_blank" title="Link to Instagram"><i
+                                            class="fab fa-instagram bold social-icon"></i></a></li>
                                 <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
-                                        target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
+                                        target="_blank" title="Link to TikTok"><i
+                                            class="fab fa-tiktok social-icon"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -121,9 +123,11 @@
                 <div>
                     <ul class="social-footer">
                         <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
-                                target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                                target="_blank" title="Link to Instagram"><i
+                                    class="fab fa-instagram bold social-icon"></i></a></li>
                         <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
-                                target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
+                                target="_blank" title="Link to TikTok"><i class="fab fa-tiktok social-icon"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
