--- a/get-your-van-road-ready.html
+++ b/get-your-van-road-ready.html
@@ -45,9 +45,11 @@
                     <div class="d-md-none d-lg-block">
                         <ul class="nav-social">
                             <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
-                                    target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                                    target="_blank" title="Link to Instagram"><i
+                                        class="fab fa-instagram bold social-icon"></i></a></li>
                             <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
-                                    target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
+                                    target="_blank" title="Link to TikTok"><i class="fab fa-tiktok social-icon"></i></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -121,7 +123,7 @@
                     and
                     four once you’ve completed your build. This article does not go into specifics on the build
                     itself. You can find information on how to convert your van <a href="diycamperconversion.html"
-                        class="bodylink">here</a>.
+                        class="bodylink" aria-label="Link to DIY Camper Conversions">here</a>.
                 </p>
                 <br><br>
                 <h2 class="bp-heading">Pre Build</h2>
@@ -191,7 +193,7 @@
                     cost.
                     I
                     have created a cover letter template that you can download <a href="camper-reg-cover-template.docx"
-                        class="bodylink" target="_blank">here</a>.
+                        class="bodylink" target="_blank" aria-label="Download cover letter template">here</a>.
                     <br><br>
                     All of your documents should be posted to:
                     <br><br>
@@ -228,7 +230,7 @@
                     place. I
                     hope that you now have a clear understanding of the process and what’s involved. Should you have
                     any
-                    questions, feel free to <a href="contact.html" class="bodylink">get in touch</a>.
+                    questions, feel free to <a href="contact.html" class="bodylink" aria-label="Link to Contact page">get in touch</a>.
                 </p>
             </div>
         </article>
@@ -260,9 +262,11 @@
                 <div>
                     <ul class="social-footer">
                         <li class="bg-social-icon"><a href="https://www.instagram.com/thefreedomproject.blog/"
-                                target="_blank"><i class="fab fa-instagram bold social-icon"></i></a></li>
+                                target="_blank" title="Link to Instagram"><i
+                                    class="fab fa-instagram bold social-icon"></i></a></li>
                         <li class="bg-social-icon"><a href="https://www.tiktok.com/@thefreedomproject?lang=en/"
-                                target="_blank"><i class="fab fa-tiktok social-icon"></i></a></li>
+                                target="_blank" title="Link to TikTok"><i class="fab fa-tiktok social-icon"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
